Styles cleanup + improved gate svg's

--- a/app/views/bricks/library.html
+++ b/app/views/bricks/library.html
@@ -8,11 +8,11 @@
   <h3>
     <a href="#">Private</a>
   </h3>
-  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private"></div>
+  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private" class="brick-container"></div>
 </div>
 <div class="bricks-container">
   <h3>
     <a href="#">Public</a>
   </h3>
-  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public"></div>
+  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public" class="brick-container"></div>
 </div>
