--- a/app/views/bricks/list_item.html
+++ b/app/views/bricks/list_item.html
@@ -1,3 +1,1 @@
-<div class="bricks">
-  <div id="brick-{{brick.type.toLowerCase()}}" class="brick brick-{{brick.type.toLowerCase()}}" tooltip="{{brick.type}}" is-draggable="{helper: 'clone'}">{{brick.type}}</div>
-</div>
+<div id="brick-{{brick.type.toLowerCase()}}" class="brick brick-{{brick.type.toLowerCase()}}" tooltip="{{brick.type}}" is-draggable="{helper: 'clone'}"></div>
