--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,243 +1,19 @@
 $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/bootstrap/";
 
-//@import 'bootstrap-sass-official/vendor/assets/stylesheets/bootstrap';
-
 // bower:scss
 @import "../bower_components/bootstrap-sass-official/vendor/assets/stylesheets/bootstrap.scss";
+
+@import "browsehappy";
+
+@import "colors.scss";
+@import "layout.scss";
+
+@import "users/hoodie-account.scss";
+
+@import "bricks/library.scss";
+@import "bricks/workspace.scss";
+@import "bricks/visualisation.scss";
+@import "bricks/connection.scss";
+@import "bricks/list_item.scss";
+@import "bricks/title.scss";
 // endbower
-
-//@import 'social-buttons.scss';
-
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
-}
-$bg: #f8f8f8;
-$shadow: gray;
-
-/* hide contents until we know if user is signed in or not */
-body .hoodie-account-signedin,
-body .hoodie-account-signedout,
-body .hoodie-account-error {
-  display: none;
-}
-
-html[data-hoodie-account-status=signedin]  .hoodie-account-signedin,
-html[data-hoodie-account-status=error]     .hoodie-account-error,
-html[data-hoodie-account-status=signedout] .hoodie-account-signedout {
-  display: block;
-}
-
-body {
-  overflow: hidden;
-  .component {
-    border: 1px solid #346789;
-    border-radius: 0.5em;
-    opacity: 0.8;
-    background-color: white;
-    color: black;
-    padding: 0.5em;
-  }
-  .brick-container {
-    float: left;
-    padding: 0 15px 10px 15px;
-  }
-  .brick {
-    height: 64px;
-    width: 65px;
-    border-radius: 5px;
-    cursor: pointer;
-    line-height: 60px;
-    text-align: center;
-    color: transparent;
-    text-transform: uppercase;
-    font-size: 14px;
-    background-repeat: no-repeat;
-    i.delete-brick {
-      display: none;
-      z-index: 1000;
-      color: #999;
-      font-size: 20px;
-      position: absolute;
-      top: -10px;
-      right: -10px;
-      cursor: pointer;
-    }
-    i.brick-popover {
-      display: none;
-      z-index: 1000;
-      color: black;
-      font-size: 20px;
-      position: absolute;
-      top: -10px;
-      right: 50px;
-      cursor: pointer;
-    }
-    &:hover {
-       i.delete-brick {
-        display: block;
-      }
-       i.brick-popover {
-        display: block;
-       }
-    }
-  }
-  .brick-and {
-    background-image: url('../images/gates/AND.svg');
-  }
-  .brick-not {
-    background-image: url('../images/gates/NOT.svg');
-    width: 68px;
-  }
-  .brick-or {
-    background-image: url('../images/gates/OR.svg');
-    width: 78px;
-  }
-  .brick-input {
-    background-image: url('../images/gates/INPUT.svg');
-    background-position: center center;
-    background-size: 32px 32px;
-  }
-  .brick-output {
-    background-image: url('../images/gates/OUTPUT.svg');
-    background-position: center center;
-    background-size: 48px 48px;
-  }
-
-  #main {
-    position: absolute;
-    left: 15px;
-    right: 15px;
-    top: 0;
-    bottom: 0;
-    #mainLeft {
-      overflow: hidden;
-      height: 100%;
-      .navbar {
-        position: absolute;
-        border-bottom: none;
-        box-shadow: 0px 0px 3px $shadow;
-        .navbar-text {
-          #title {
-            background-color: transparent;
-            border: none;
-            padding: 4px 8px;
-            margin: -4px;
-            border-radius: 2px;
-            -webkit-border-radius: 2px;
-            -moz-border-radius: 2px;
-            outline: none;
-            &:hover, &:focus {
-              border: 1px solid #ddd;
-              margin: -5px;
-            }
-            &:focus {
-              background-color: white;
-            }
-          }
-        }
-        .navbar-right > ul > li > a > i {
-          font-size: 1.4em;
-        }
-      }
-      .row {
-        position: absolute;
-        left: 15px;
-        right: 15px;
-        bottom: 0;
-        top: 50px;
-        #workspace {
-          height: 100%;
-          background: url('../images/grid.png') repeat;
-          border: none;
-          overflow: auto;
-        }
-      }
-    }
-    #mainRight {
-      background-color: $bg;
-      box-shadow: 0px 0px 3px $shadow;
-      height: 100%;
-      .nav-tabs {
-        border-bottom: none;
-        margin-top: 9px;
-        position: relative;
-        z-index: 1;
-        a {
-          cursor: pointer;
-        }
-      }
-      .tab-content {
-        position: absolute;
-        left: 15px;
-        right: 15px;
-        bottom: 15px;
-        top: 50px;
-        .tab-pane {
-          height: 100%;
-        }
-        #library {
-          height: 100%;
-          .panel {
-            position: absolute;
-            top: 0;
-            bottom: 27px;
-            right: 0;
-            left: 0;
-            -webkit-border-top-left-radius: 0;
-            -moz-border-radius-topleft: 0;
-            border-top-left-radius: 0;
-            .panel-body {
-              height: 100%;
-              h3 {
-                border-bottom: 1px solid #999;
-                width: 100%;
-                text-align: center;
-                font-size: 0.7em;
-                height: 0.6em;
-                margin-bottom: 1em;
-                clear: both;
-                a {
-                  padding: 0 5px;
-                  color: #777;
-                  background-color: white;
-                  text-transform: uppercase;
-                }
-              }
-              .gates-container {
-                margin-bottom: 20px;
-                overflow: hidden;
-                h3 {
-                  margin-bottom: 20px;
-                }
-                .bricks {
-
-                }
-              }
-            }
-          }
-          .filters {
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            .input-group-btn {
-              width: 1%;
-            }
-          }
-        }
-        #visualisation {
-          height: 100%;
-          .panel {
-            height: 100%;
-            .panel-body {
-              height: 100%;
-            }
-          }
-        }
-      }
-    }
-  }
-}
