Ensure no gates can be dragged when any popover is opened + refactor or circuit events

--- a/app/views/bricks/show.html
+++ b/app/views/bricks/show.html
@@ -1,1 +1,1 @@
-<div class="col-xs-12 ui-widget-content" id="workspace" is-droppable circuit-Settings></div>
+<div class="col-xs-12 ui-widget-content" id="workspace" is-droppable circuit-Settings circuit-events></div>
