--- a/app/views/bricks/library.html
+++ b/app/views/bricks/library.html
@@ -1,18 +1,40 @@
-<div class="bricks-container">
-  <h3>
-    <a href="#">Gates</a>
-  </h3>
-  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in gates" class="brick-container"></div>
+<div class="panel panel-default">
+  <div class="panel-body">
+    <div class="bricks-container">
+      <h3>
+        <a href="#">Gates</a>
+      </h3>
+      <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in gates" class="brick-container"></div>
+    </div>
+    <div class="bricks-container">
+      <h3>
+        <a href="#">Private</a>
+      </h3>
+      <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private" class="brick-container"></div>
+    </div>
+    <div class="bricks-container">
+      <h3>
+        <a href="#">Public</a>
+      </h3>
+      <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public" class="brick-container"></div>
+    </div>
+  </div>
 </div>
-<div class="bricks-container">
-  <h3>
-    <a href="#">Private</a>
-  </h3>
-  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private" class="brick-container"></div>
-</div>
-<div class="bricks-container">
-  <h3>
-    <a href="#">Public</a>
-  </h3>
-  <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public" class="brick-container"></div>
-</div>
+<form class="form-inline filters">
+  <div class="form-group">
+    <div class="input-group">
+      <input type="text" class="form-control" placeholder="Search...">
+      <div class="input-group-btn" data-toggle="buttons">
+        <a href="#" class="btn btn-default" tooltip="Gates" tooltip-append-to-body="true">
+          <i class="fa fa-wrench"></i>
+        </a>
+        <a href="#" class="btn btn-default" tooltip="Private" tooltip-append-to-body="true">
+          <i class="fa fa-eye-slash"></i>
+        </a>
+        <a href="#" class="btn btn-default" tooltip="Public" tooltip-append-to-body="true">
+          <i class="fa fa-eye"></i>
+        </a>
+      </div>
+    </div>
+  </div>
+</form>
