--- a/app/styles/bricks/library.scss
+++ b/app/styles/bricks/library.scss
@@ -12,6 +12,7 @@
     .panel-body {
       height: 100%;
       .bricks-container {
+        overflow: hidden;
         h3 {
           border-bottom: 1px solid #999;
           width: 100%;
