--- a/app/views/bricks/nav.html
+++ b/app/views/bricks/nav.html
@@ -1,21 +1,21 @@
-<ul class="nav navbar-nav">
+<ul class="nav navbar-nav" ng-controller="BricksCtrl">
   <li>
-    <a href="#" tooltip="New&nbsp;brick" tooltip-placement="bottom">
+    <a href tooltip="New&nbsp;brick" tooltip-placement="bottom" ng-click="new()">
       <i class="fa fa-plus"></i>
     </a>
   </li>
   <li>
-    <a href="#" tooltip="Copy&nbsp;brick" tooltip-placement="bottom">
+    <a href tooltip="Copy&nbsp;brick" tooltip-placement="bottom" ng-click="copy()">
       <i class="fa fa-copy"></i>
     </a>
   </li>
   <li>
-    <a href="#" tooltip="Run" tooltip-placement="bottom">
+    <a href tooltip="Run" tooltip-placement="bottom" ng-click="run()">
       <i class="fa fa-play"></i>
     </a>
   </li>
   <li>
-    <a href="#" tooltip="Export" tooltip-placement="bottom">
+    <a href tooltip="Export" tooltip-placement="bottom" ng-click="export()">
       <i class="fa fa-download"></i>
     </a>
   </li>
