Implement basic simulation of ODEs

--- a/app/views/bricks/nav.html
+++ b/app/views/bricks/nav.html
@@ -10,7 +10,7 @@
     </a>
   </li>
   <li>
-    <a href="#" tooltip="Run" tooltip-placement="bottom">
+    <a tooltip="Run" tooltip-placement="bottom" ng-click="run()">
       <i class="fa fa-play"></i>
     </a>
   </li>
