--- a/app/views/bricks/library.html
+++ b/app/views/bricks/library.html
@@ -1,37 +1,30 @@
 <div class="panel panel-default">
   <div class="panel-body">
-    <div class="bricks-container" collapse="collapse.gates">
-      <h3>
-        <a href="#">Gates</a>
-      </h3>
-      <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in gates" class="brick-container"></div>
-    </div>
-    <div class="bricks-container" collapse="collapse.private">
-      <h3>
-        <a href="#">Private</a>
-      </h3>
-      <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private" class="brick-container"></div>
-    </div>
-    <div class="bricks-container" collapse="collapse.public">
-      <h3>
-        <a href="#">Public</a>
-      </h3>
-      <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public" class="brick-container"></div>
-    </div>
+    <accordion close-others="multipleAtATime">
+      <accordion-group heading="Gates" is-open="collapse.gates">
+        <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in gates | filter:search" class="brick-container"></div>
+      </accordion-group>
+      <accordion-group heading="Private" is-open="collapse.private">
+        <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private | filter:search" class="brick-container"></div>
+      </accordion-group>
+      <accordion-group heading="Public" is-open="collapse.public">
+        <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public | filter:search" class="brick-container"></div>
+      </accordion-group>
+    </accordion>
   </div>
 </div>
 <form class="form-inline filters">
   <div class="form-group">
     <div class="input-group">
-      <input type="text" class="form-control" placeholder="Search...">
-      <div class="input-group-btn" data-toggle="buttons">
-        <a class="btn btn-default" tooltip="Gates" tooltip-append-to-body="true" ng-click="filter('gates')">
+      <input type="text" class="form-control" placeholder="Search..." ng-model="search.$">
+      <div class="input-group-btn">
+        <a class="btn btn-default" tooltip="Gates" tooltip-append-to-body="true" ng-model="collapse.gates" btn-checkbox>
           <i class="fa fa-wrench"></i>
         </a>
-        <a class="btn btn-default" tooltip="Private" tooltip-append-to-body="true" ng-click="filter('private')">
+        <a class="btn btn-default" tooltip="Private" tooltip-append-to-body="true" ng-model="collapse.private" btn-checkbox>
           <i class="fa fa-eye-slash"></i>
         </a>
-        <a class="btn btn-default" tooltip="Public" tooltip-append-to-body="true" ng-click="filter('public')">
+        <a class="btn btn-default" tooltip="Public" tooltip-append-to-body="true" ng-model="collapse.public" btn-checkbox>
           <i class="fa fa-eye"></i>
         </a>
       </div>
