Add more visualization code

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -17,7 +17,7 @@
       <div id="library" ng-include="'views/bricks/library.html'" ng-controller="BricksCtrl"></div>
     </tab>
     <tab heading="Visualisation">
-      <div id="visualisation" ng-include="'views/bricks/visualisation.html'"></div>
+      <div id="visualisation" ng-controller="BricksCtrl" ng-include="'views/bricks/visualisation.html'"></div>
     </tab>
   </div>
 </div>
