--- a/app/views/bricks/nav.html
+++ b/app/views/bricks/nav.html
@@ -1,4 +1,4 @@
-<ul class="nav navbar-nav" ng-controller="BricksCtrl">
+<ul class="nav navbar-nav">
   <li>
     <a href tooltip="New&nbsp;brick" tooltip-placement="bottom" ng-click="new()">
       <i class="fa fa-plus"></i>
