--- a/app/styles/bricks/workspace.scss
+++ b/app/styles/bricks/workspace.scss
@@ -1,6 +1,19 @@
 #workspace {
-  height: 100%;
-  background: url('../images/grid.png') repeat;
-  border: none;
-  overflow: auto;
+	height: 100%;
+	background: url('../images/grid.png') repeat;
+	border: none;
+	overflow: auto;
+	.dl-horizontal { 
+		width: 180px;
+		dd {
+			margin-left: 20px;
+			width: auto;
+		}
+		dt {
+			margin-left: 0px;
+			width: 100px;
+			left: 0;
+			text-align: left;
+		}
+	}
 }
