Add authentication tests for sign in and destroy account

--- a/app/views/users/nav.html
+++ b/app/views/users/nav.html
@@ -6,10 +6,10 @@
 
     <ul class="dropdown-menu pull-right">
       <li class="hoodie-account-signedout">
-        <a href="#" data-hoodie-action="signup" id="signup">Sign up</a>
+        <a href="#" data-hoodie-action="signup" id="signupLink">Sign up</a>
       </li>
       <li class="hoodie-account-signedout">
-        <a href="#" data-hoodie-action="signin">Sign in</a>
+        <a href="#" data-hoodie-action="signin" id="signinLink">Sign in</a>
       </li>
       <li class="hoodie-account-signedout">
         <a href="#" data-hoodie-action="resetpassword">Reset password</a>
@@ -28,7 +28,7 @@
         <a href="#" data-hoodie-action="changeusername">Change username</a>
       </li>
       <li class="hoodie-account-signedin">
-        <a href="#" data-hoodie-action="destroy">Destroy account</a>
+        <a href="#" data-hoodie-action="destroy" id="destroyAccountLink">Destroy account</a>
       </li>
 
       <li class="hoodie-account-error">
