--- a/app/views/bricks/nav.html
+++ b/app/views/bricks/nav.html
@@ -11,7 +11,7 @@
   </li>
   <li>
     <a href tooltip="Run" tooltip-placement="bottom" ng-click="run()">
-      <i class="fa fa-play"></i>
+      <i class="fa fa-play" ng-class="{ 'fa-play': !isRunning, 'fa-spin fa-spinner': isRunning }"></i>
     </a>
   </li>
   <li>
