--- a/app/views/bricks/title.html
+++ b/app/views/bricks/title.html
@@ -1,7 +1,6 @@
-<input type="text" name="title" id="title" ng-model="currentBrick.attributes.title" value="{{ currentBrick.attributes.title }}" />
+<input type="text" name="title" id="title" ng-model="currentBrick.attributes.title" ng-blur="save()" value="{{ currentBrick.attributes.title }}" />
 <em class="text-muted hidden-xs state">
   -
-  <span class="saved" ng-class="{ 'hidden': currentBrick.isSaving }">saved</span>
-  <span class="saving" ng-class="{ 'hidden': !currentBrick.isSaving }">saving...</span>
-  <span>{{ currentBrick.isSaving }}</span>
+  <span class="saved" ng-class="{ 'hidden': isSaving }">saved</span>
+  <span class="saving" ng-class="{ 'hidden': !isSaving }">saving...</span>
 </em>
