--- a/app/styles/bricks/library.scss
+++ b/app/styles/bricks/library.scss
@@ -11,6 +11,7 @@
     border-top-left-radius: 0;
     > .panel-body {
       height: 100%;
+      overflow: auto;
       .panel {
         overflow: hidden;
         border: none;
