--- a/app/views/bricks/library.html
+++ b/app/views/bricks/library.html
@@ -2,7 +2,7 @@
   <div class="panel-body">
     <accordion close-others="multipleAtATime">
       <accordion-group id="gates" heading="Gates" is-open="collapse.gates">
-        <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in gates | filter:search" class="brick-container"></div>
+        <div ng-include="'views/bricks/gate.html'" ng-repeat="brick in gates | filter:search" class="brick-container"></div>
       </accordion-group>
       <accordion-group id="private" heading="Private" is-open="collapse.private">
         <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private | filter:search" class="brick-container"></div>
