--- a/app/views/bricks/nav.html
+++ b/app/views/bricks/nav.html
@@ -5,6 +5,11 @@
     </a>
   </li>
   <li>
+    <a href tooltip="Remove&nbsp;brick" tooltip-placement="bottom" ng-click="destroy()">
+      <i class="fa fa-trash-o"></i>
+    </a>
+  </li>
+  <li>
     <a href tooltip="Copy&nbsp;brick" tooltip-placement="bottom" ng-click="copy()">
       <i class="fa fa-copy"></i>
     </a>
