--- a/app/views/bricks/library.html
+++ b/app/views/bricks/library.html
@@ -4,11 +4,11 @@
       <accordion-group id="gates" heading="Gates" is-open="collapse.gates">
         <div ng-include="'views/bricks/gate.html'" ng-repeat="brick in gates | filter:search" class="brick-container"></div>
       </accordion-group>
-      <accordion-group id="private" heading="Private" is-open="collapse.private">
+      <accordion-group id="private" heading="Projects" is-open="collapse.private">
         <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in private | filter:search" class="brick-container"></div>
       </accordion-group>
-      <accordion-group id="public" heading="Public" is-open="collapse.public">
-        <div ng-include="'views/bricks/list_item.html'" ng-repeat="brick in public | filter:search" class="brick-container"></div>
+      <accordion-group id="public" heading="Standard bricks" is-open="collapse.public">
+        <div ng-include="'views/bricks/standard_brick.html'" ng-repeat="brick in public | filter:search" class="brick-container"></div>
       </accordion-group>
     </accordion>
   </div>
@@ -21,10 +21,10 @@
         <a class="btn btn-default" tooltip="Gates" tooltip-append-to-body="true" ng-model="collapse.gates" btn-checkbox>
           <i class="fa fa-wrench"></i>
         </a>
-        <a class="btn btn-default" tooltip="Private" tooltip-append-to-body="true" ng-model="collapse.private" btn-checkbox>
+        <a class="btn btn-default" tooltip="Projects" tooltip-append-to-body="true" ng-model="collapse.private" btn-checkbox>
           <i class="fa fa-eye-slash"></i>
         </a>
-        <a class="btn btn-default" tooltip="Public" tooltip-append-to-body="true" ng-model="collapse.public" btn-checkbox>
+        <a class="btn btn-default" tooltip="Standard bricks" tooltip-append-to-body="true" ng-model="collapse.public" btn-checkbox>
           <i class="fa fa-eye"></i>
         </a>
       </div>
