--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -16,3 +16,4 @@ $icon-font-path: "/bower_components/bootstrap-sass-official/vendor/assets/fonts/
 @import "bricks/connection.scss";
 @import "bricks/list_item.scss";
 @import "bricks/title.scss";
+@import "bricks/input.scss";
