--- a/app/views/bricks/list_item.html
+++ b/app/views/bricks/list_item.html
@@ -1,3 +1,3 @@
-<div class="brick" is-draggable="{helper: 'clone'}" ng-click="setCurrentBrick(brick)">
+<div class="brick new-project" data-id= "{{ brick.attributes.id }}" is-draggable="{helper: 'clone'}" ng-click="setCurrentBrick(brick)">
   {{ brick.attributes.title }}
 </div>
