Adding resizable right part

--- a/app/styles/bricks/workspace.scss
+++ b/app/styles/bricks/workspace.scss
@@ -1,9 +1,9 @@
 #workspace {
 	height: 100%;
-	background: url('../images/grid.png') repeat;
+	background: white url('../images/grid.png') repeat;
 	border: none;
 	overflow: auto;
-	.dl-horizontal { 
+	.dl-horizontal {
 		width: 180px;
 		dd {
 			margin-left: 20px;
