Fix input popover

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -2,6 +2,9 @@
 
 body {
   background-color: $bgColor;
+  .popover {
+    max-width: none;
+  }
   #main {
     position: absolute;
     left: 15px;
