Fixing resize + define is not defined

--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -11,6 +11,7 @@ body {
     right: 15px;
     top: 0;
     bottom: 0;
+    overflow: hidden;
     #mainLeft {
       overflow: hidden;
       height: 100%;
